# calendar

./: CMakeLists.txt  Makefile  README.md  calendar.pro  main.cpp  Разработчик Б.txt
src_lib/: mainwindow.cpp
объяснения кодов файлов/: CMakeLists.txt_объяснение.txt  calendarwidget.pro.txt  main.cpp с объяснениями.txt  window.cpp объяснение кода.txt  window.h с объяснениями.txt
